commit Fix: Adjusted PlaceOrder page layout for better alignment

--- a/src/Components/LoginPopUp/loginpopup.css
+++ b/src/Components/LoginPopUp/loginpopup.css
@@ -5,6 +5,7 @@
     height: 100%;
     background-color: #0000009a;
     display: grid;
+    position: fixed;
 }
 .login-popup-container{
     place-self: center;
